--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"  xmlns:th="http://www.thymeleaf.org">
+>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,13 +14,14 @@
 	</head>
 
 	<body class="text-center">
-		<form class="form-signin" action="dashboard.html">
+		<form class="form-signin" th:action="@{/user/login}" action="dashboard.html" method="post">
 			<img class="mb-4" src="asserts/img/bootstrap-solid.svg" th:src="@{/asserts/img/bootstrap-solid.svg}" alt="" width="72" height="72">
 			<h1 class="h3 mb-3 font-weight-normal" th:text="#{login.tip}">Please sign in</h1>
+			<p style="color: red" th:text="${msg}" th:if="${not #strings.isEmpty(msg)}"></p>
 			<label class="sr-only" th:text="#{login.Username}">Username</label>
-			<input type="text" class="form-control"  placeholder="Username" th:placeholder="#{login.Username}" required="" autofocus="">
+			<input type="text" name="username" class="form-control"  placeholder="Username" th:placeholder="#{login.Username}" required="" autofocus="">
 			<label class="sr-only" th:text="#{login.Password}">Password</label>
-			<input type="password" class="form-control" placeholder="Password" th:placeholder="#{login.Password}" required="">
+			<input type="password" name="password" class="form-control" placeholder="Password" th:placeholder="#{login.Password}" required="">
 			<div class="checkbox mb-3">
 				<label>
           <input type="checkbox" value="remember-me"> [[#{login.remember}]]
@@ -27,8 +29,8 @@
 			</div>
 			<button class="btn btn-lg btn-primary btn-block" type="submit" th:text="#{login.btn}">Sign in</button>
 			<p class="mt-5 mb-3 text-muted">© 2017-2018</p>
-			<a class="btn btn-sm" th:href="@{/index.html(l='zh_CN')}">中文</a>
-			<a class="btn btn-sm" th:href="@{/index.html(l='en_US')}">English</a>
+			<a class="btn btn-sm" th:href="@{/login.html(l='zh_CN')}">中文</a>
+			<a class="btn btn-sm" th:href="@{/login.html(l='en_US')}">English</a>
 		</form>
 
 	</body>
